@startuml

title __DAO's Class Diagram__\n

  namespace  {
    namespace baldr2.model {
      namespace dao {
        class kbaldr2.model.dao.AppointmentDAO {
            {static} - DELETE_RECORD_STMT : String
            {static} - SELECT_ALL_STMT : String
            {static} - appointmentData : ObservableList<DataCache>
            + AppointmentDAO()
            + create()
            + delete()
            + getAll()
            + update()
        }
      }
    }
  }
  

  namespace  {
    namespace baldr2.model {
      namespace dao {
        class kbaldr2.model.dao.ContactDAO {
            {static} - contactData : ObservableList<DataCache>
            + ContactDAO()
            + create()
            + delete()
            + getAll()
            + update()
        }
      }
    }
  }
  

  namespace  {
    namespace baldr2.model {
      namespace dao {
        class kbaldr2.model.dao.CustomerDAO {
            {static} - DELETE_RECORD_STMT : String
            {static} - SELECT_ALL_STMT : String
            {static} - customerData : ObservableList<DataCache>
            + CustomerDAO()
            + create()
            + delete()
            + getAll()
            + update()
        }
      }
    }
  }
  

  namespace  {
    namespace baldr2.model {
      namespace dao {
        abstract class kbaldr2.model.dao.DAO {
            {static} # connection : Connection
            {static} # user : String
            + DAO()
            {abstract} + create()
            {abstract} + delete()
            {abstract} + getAll()
            {static} + getUsername()
            {static} + setUsername()
            {abstract} + update()
        }
      }
    }
  }
  

  namespace  {
    namespace baldr2.model {
      namespace dao {
        class kbaldr2.model.dao.LocationDAO {
            {static} - divisionData : ObservableList<DataCache>
            + LocationDAO()
            + create()
            + delete()
            + getAll()
            + update()
        }
      }
    }
  }
  

  namespace  {
    namespace baldr2.model {
      namespace dao {
        class kbaldr2.model.dao.ReportDAO {
            {static} # connection : Connection
            + ReportDAO()
            + getAppointmentsByCustomerAndContact()
            + getAppointmentsByTypeAndMonth()
        }
      }
    }
  }
  

  namespace  {
    namespace baldr2.model {
      namespace dao {
        class kbaldr2.model.dao.UserDAO {
            {static} - userData : ObservableList<DataCache>
            + UserDAO()
            + create()
            + delete()
            + getAll()
            + update()
        }
      }
    }
  }
  

  kbaldr2.model.dao.AppointmentDAO -up-|> kbaldr2.model.dao.DAO
  kbaldr2.model.dao.ContactDAO -up-|> kbaldr2.model.dao.DAO
  kbaldr2.model.dao.CustomerDAO -up-|> kbaldr2.model.dao.DAO
  kbaldr2.model.dao.LocationDAO -up-|> kbaldr2.model.dao.DAO
  kbaldr2.model.dao.UserDAO -up-|> kbaldr2.model.dao.DAO


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
